# datalad-cbbsimaging

./: .appveyor.yml  .gitattributes  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  requirements-devel.txt  setup.cfg  setup.py  setup_support.py
.github/workflows/: test-datalad_hirni.yaml
datalad_hirni/: __init__.py  _version.py
datalad_hirni/commands/: create_study.py  dicom2spec.py  import_dicoms.py  spec2bids.py
datalad_hirni/resources/procedures/: cfg_hirni.py
datalad_hirni/support/: hirni_heuristic.py
datalad_hirni/tests/: test_demos.py  test_dicom2spec.py  test_dicomconv.py  test_import.py  utils.py
datalad_hirni/webapp/specedit/: app.conf  app.py  studyspec.json  test.html
datalad_hirni/webapp/specedit/static/: q  q.html
datalad_hirni/webapp/specedit/static/js/: index.js
docs/source/: changelog.rst  concepts.rst
docs/source/demos/: demo_reproducibility.rst  study.rst
