[metadata]
url = https://github.com/psychoinformatics-de/datalad-hirni
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad extension for raw data capturing and conversion workflows
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.5
install_requires =
    datalad >= 0.14.0
    datalad-metalad >=0.2.0
    datalad-neuroimaging >=0.3.1
    datalad-container >=1.1.2
    datalad-webapp >=0.3
test_requires =
    nose
    nose-exclude
    coverage
packages = find:
include_package_data = True

[options.extras_require]
devel-docs =
    pypandoc
    sphinx >= 1.6.2
    sphinx-rtd-theme
devel =
    nose
    nose-exclude
    coverage

[options.packages.find]
# do not ship the build helpers
exclude=
    _datalad_buildsupport

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = datalad_hirni/_version.py  
versionfile_build = datalad_hirni/_version.py
tag_prefix =
parentdir_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_hirni/_version.py

